<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/logo1"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/via_khat_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@id/blurDialogIV"
        app:riv_corner_radius="@dimen/_20sdp" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/blurDialogIV"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_320sdp"
        android:src="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<ImageView
    android:id="@+id/welcomeGradient"
    android:layout_width="@dimen/_200sdp"
    android:layout_height="@dimen/_150sdp"
    android:layout_marginTop="@dimen/_10sdp"
    android:background="@drawable/welcome_dialog"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/blurDialogIV"
    android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/bonbon"
        android:text="@string/hi_there"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toBottomOf="@id/welcomeGradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/welcomeGradient" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/condiment"
        android:text="@string/welcome"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_40ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeGradient" />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/clickToContinueButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/click_to_continue"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="@dimen/_10ssp"
        android:textStyle="italic"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@id/blurDialogIV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeGradient"
        app:layout_constraintVertical_bias="0.733"
        app:rippleColor="@color/primary_dark" />
</androidx.constraintlayout.widget.ConstraintLayout>